# cecil

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  cecil.spec  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-engineer.md  devops-engineer.md  frontend-engineer.md  product-manager.md  qa-engineer.md  security-reviewer.md  software-architect.md  systems-engineer.md  tech-lead.md  ux-designer.md
.github/workflows/: ci-validation.yml
docs/: STYLE_GUIDE.md  detailed_design.md  dev-guide.md  github_issues.md  user_stories.md
docs/agents/: product_manager_agent.md  software_architect.md  tech_lead.md
docs/design/wireframes/: mvp-wireframe3.html  mvp-wireframes.html  mvp-wireframes2.html
scripts/: build.py  verify_build.py
src/cecil/: __init__.py
src/cecil/api/: __init__.py  schemas.py  server.py
src/cecil/api/routes/: filesystem.py  jobs.py  mappings.py  scans.py
src/cecil/cli/: __init__.py  app.py  scan.py
src/cecil/core/: __init__.py
src/cecil/core/output/: __init__.py  writer.py
src/cecil/core/providers/: __init__.py  base.py  local_file.py  mock.py  registry.py
src/cecil/core/sanitizer/: __init__.py  actions.py  engine.py  mapping.py  models.py  strategies.py
src/cecil/utils/: __init__.py  errors.py  paths.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_file_ingestion.py  test_mapping_wizard_flow.py  test_performance_benchmark.py  test_safe_pipe_leak_detection.py
tests/fixtures/: __init__.py  mapping_all_actions.yaml  mapping_invalid_action.yaml  mapping_invalid_version.yaml  mapping_minimal.yaml  mapping_valid.yaml  pii_samples.py  sample_logs.jsonl  sample_records.csv
tests/integration/: conftest.py  test_local_file_streaming.py  test_mapping_persistence.py  test_sanitization_pipeline.py
tests/integration/api/: test_browse_scan_flow.py
tests/unit/: test_pii_fixtures.py
tests/unit/api/: conftest.py  test_filesystem.py  test_mappings.py  test_scans.py  test_schemas.py  test_server.py
tests/unit/cli/: test_scan.py
tests/unit/core/output/: test_writer.py
tests/unit/core/providers/: conftest.py  test_base.py  test_local_file.py  test_local_file_memory.py  test_registry.py  test_streaming_memory.py
tests/unit/core/sanitizer/: conftest.py  test_actions.py  test_deep_interceptor_strategy.py  test_engine.py  test_mapping.py  test_models.py  test_strict_strategy.py
tests/unit/utils/: test_paths.py
ui/: .env.example  .eslintrc.cjs  .gitignore  IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  index.css  main.tsx
ui/src/components/common/: EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.tsx  NavLink.tsx  Shell.test.tsx  Shell.tsx  StatusPill.test.tsx  StatusPill.tsx  ThemeProvider.test.tsx  ThemeProvider.tsx  ThemeToggle.tsx  WelcomeModal.test.tsx  WelcomeModal.tsx
ui/src/components/dashboard/: JobDetailDrawer.tsx  JobHistoryTable.test.tsx  JobHistoryTable.tsx  StatCard.test.tsx  StatCard.tsx  StatsGrid.test.tsx  StatsGrid.tsx
ui/src/components/ingestion/: BreadcrumbNav.tsx  FileBrowserModal.test.tsx  FileBrowserModal.tsx  FileListItem.tsx  FilePickerCard.test.tsx  FilePickerCard.tsx  FormatSelector.test.tsx  FormatSelector.tsx  IngestionProgress.test.tsx  IngestionProgress.tsx
ui/src/components/mapping/: ActionSelector.test.tsx  ActionSelector.tsx  FieldMappingRow.tsx  FieldMappingTable.test.tsx  FieldMappingTable.tsx  MappingEditor.tsx  MappingEmptyState.test.tsx  MappingEmptyState.tsx  MappingToolbar.test.tsx  MappingToolbar.tsx  MappingViewer.tsx  PreviewPanel.tsx  SavedMappingsList.tsx  ValidationPanel.tsx
ui/src/components/wizard/: CompletionView.test.tsx  CompletionView.tsx  CostAnalysisCTA.test.tsx  CostAnalysisCTA.tsx  LocalOutputCard.test.tsx  LocalOutputCard.tsx  LogOutput.test.tsx  LogOutput.tsx  MappingConfigStep.test.tsx  MappingConfigStep.tsx  ProcessingView.test.tsx  ProcessingView.tsx  ProgressCard.test.tsx  ProgressCard.tsx  QueuedFiles.test.tsx  QueuedFiles.tsx  ResultsViewer.tsx  TrustBadge.test.tsx  TrustBadge.tsx  UploadZone.test.tsx  UploadZone.tsx  WizardContainer.test.tsx  WizardContainer.tsx  WizardHeader.test.tsx  WizardHeader.tsx
ui/src/hooks/: useFileBrowser.ts  useJobList.ts  useMapping.ts  useMappingList.ts  useRouter.test.ts  useRouter.ts  useScanProgress.test.ts  useScanProgress.ts  useTheme.test.ts  useTheme.ts
ui/src/lib/: apiClient.test.ts  apiClient.ts  errorMessages.ts
ui/src/pages/: AuditPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  IngestPage.test.tsx  IngestPage.tsx  MappingPage.test.tsx  MappingPage.tsx
ui/src/types/: index.ts
