[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cecil"
version = "0.1.0"
description = "Data Sanitizer & Cost Optimizer — local-first CLI for PII/PHI redaction"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
cecil = "cecil.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "faker>=24.0.0",
]
build = [
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert is expected in test code
"scripts/**/*.py" = ["S603", "S607"]  # subprocess calls are intentional in build scripts

[tool.ruff.lint.isort]
known-first-party = ["cecil", "tests"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"

# ── mypy ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "spacy.*",
]
ignore_missing_imports = true

# ── pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests requiring server infrastructure",
    "safe_pipe: Safe-Pipe leak detection tests (critical security invariants)",
    "benchmark: performance benchmark tests (memory ceiling, throughput)",
    "ui: browser-based UI tests requiring Playwright and a built frontend",
]

[tool.coverage.run]
source = ["cecil"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ── Bandit ─────────────────────────────────────────────────────────────
[tool.bandit]
targets = ["src/cecil"]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # allow assert in non-production code
